[gd_scene load_steps=4 format=1]

[ext_resource path="res://Agordoj.gd" type="Script" id=1]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Sonoj/371878__mafon2__trickle-clicker.ogg" type="AudioStream" id=3]

[node name="Agordoj" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 760.0
margin/bottom = 1160.0
script/script = ExtResource( 1 )

[node name="Sonoj" type="CheckButton" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 250.0
margin/right = 400.0
margin/bottom = 345.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Sonoj"
flat = false
align = 0

[node name="Muzikoj" type="CheckButton" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 500.0
margin/right = 399.0
margin/bottom = 600.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Muzikoj"
flat = false
align = 0

[node name="Bone" type="Button" parent="."]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = -888.0
margin/right = -805.0
margin/bottom = -1079.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Bone"
flat = false

[node name="Enveno_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = false
stream/volume_db = 8.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="toggled" from="Sonoj" to="." method="_on_Sonoj_toggled"]

[connection signal="toggled" from="Muzikoj" to="." method="_on_Muzikoj_toggled"]

[connection signal="pressed" from="Bone" to="." method="_on_Bone_pressed"]


